# modelado-y-simulacion

./: .gitignore  README.md  pyproject.toml
clase_01/: clase_01.html  clase_01.qmd  mys_clase_01a_modelo_lineal.m  mys_clase_01b_func.m  mys_clase_01b_main.m
clase_02/: clase_02.html  clase_02.qmd  mys_clase_02_comparacion_lineal_nolineal.m  mys_clase_02a_simulacion_recinto_termico.m  mys_clase_02b_comparacion_lineal_nolineal.m
clase_03/: MyS_02_MBK1.m  MyS_02_MBK2.m  MyS_02_tank1.m  MyS_02_tank1_func.m  clase_03.html  clase_03.qmd  mys_clase_03a_mbk_2gdl.m  mys_clase_03a_mbk_ode45.m  mys_clase_03b_mbk_ode45.m  mys_clase_03c_me2ft.m
clase_04/: Control_de_antena_code.m  MyS_03_Ejemplo_de_funcion.m  MyS_04_A.m  clase_04.qmd  mys_clase_03a_antena_motor_lazo_abierto.m  mys_clase_03a_control_antena.m  mys_clase_03b_comandos_bloques_control_pi.m  mys_clase_03b_control_antena.m
clase_05/: MyS_05_Sistemas_MIMO.m  MyS_06_Funcion_transferencia.m  clase_05.qmd  mys_clase_05a_sistemas_FT_SISO.m  mys_clase_05b_sistemas_FT_MISO.m  mys_clase_05c_sistemas_FT_MIMO.m  mys_clase_05c_sistemas_FT_SIMO.m  mys_clase_05d_sistemas_FT_MIMO.m
clase_06/: MyS_06a_verificacion.m  MyS_06b_tiempo_discreto_y_continuo.m  MyS_07_tiempo_discreto_y_continuo.m  clase_06.html  clase_06.qmd  mys_06a_respuesta_discreta.m  mys_06b_verificacion.m  mys_06c_conversiones.m
clase_07/: clase_07.qmd
clase_08/: clase_08.qmd
material/: MyS_08.m  MyS_09_Masa_variable.m
stability-margins/: stability_margins.qmd
