[project]
name = "modelado-y-simulacion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.0",
]
